--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
-    "@distube/ytdl-core": "^4.14.4",
-    "axios": "^1.6.7"
+    "@distube/ytdl-core": "^4.14.4"
   }
 }
